kubernetes/cluster/extras/mazanoke/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mazanoke
  namespace: extras
  labels:
    app.kubernetes.io/name: mazanoke
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: public
  rules:
    - host: jpg.brhd.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keda-http-interceptor
                port:
                  number: 8080
  tls:
    - hosts:
        - jpg.brhd.io
      secretName: jpg-brhd-io-tls
